LPS-42188 - Prevent input fields overlapping

--- a/portal-web/docroot/html/themes/_styled/css/application.css
+++ b/portal-web/docroot/html/themes/_styled/css/application.css
@@ -15,6 +15,23 @@
 	background: #FFC;
 }
 
+.hsv-palette {
+	.hsv-view-container {
+		.hsv-label-value-hex .hsv-value {
+			width: 95px;
+		}
+
+		.hsv-label {
+			display: inline;
+			margin-left: 5px;
+		}
+
+		.hsv-value {
+			width: 30px;
+		}
+	}
+}
+
 .portlet-boundary.yui3-dd-dragging {
 	@include opacity(0.6);
 
@@ -607,6 +624,12 @@
 .lfr-page-layouts .lfr-layout-template .layout-template-entry {
 	height: 25px;
 	width: 25px;
+}
+
+.yui3-color-picker-popover {
+	.palette-container {
+		border-collapse: separate;
+	}
 }
 
 .ie {
